--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -175,8 +175,8 @@ ga('send', 'pageview');
                 Copyright © {{ site.time | date: "%Y" }} {{ site.name }} 
             </div>
             <div class="col-md-6 col-sm-6 text-center text-lg-right">    
-                <a target="_blank" href="https://www.wowthemes.net/mediumish-free-jekyll-template/">Mediumish Jekyll Theme</a> by WowThemes.net
-            </div>
+                <a target="_blank" href="https://www.wowthemes.net/mediumish-free-jekyll-template/">Made with &hearts;</a> by Manan Garg 
+		</div>
         </div>
     </div>
 </footer>
